--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "node": ">=14.17.2"
   },
   "dependencies": {
+    "bootstrap": "^5.1.1",
+    "immer": "^9.0.6",
+    "moment": "^2.29.1",
     "next": "^11.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "reactstrap": "^8.10.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.1.0",
