--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "node": ">=14.17.2"
   },
   "dependencies": {
+    "@progress/kendo-licensing": "^1.2.0",
+    "@progress/kendo-react-buttons": "^4.9.0",
+    "@progress/kendo-react-conversational-ui": "^4.9.0",
+    "@progress/kendo-react-intl": "^4.9.0",
+    "@progress/kendo-theme-default": "^4.41.2",
     "bootstrap": "^5.1.1",
     "immer": "^9.0.6",
     "moment": "^2.29.1",
