add testing library user event
Signed-off-by: Ky <virginie.ky@gmail.com>

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@progress/kendo-react-conversational-ui": "^4.9.0",
     "@progress/kendo-react-intl": "^4.9.0",
     "@progress/kendo-theme-default": "^4.41.2",
+    "@testing-library/user-event": "^13.2.1",
     "bootstrap": "^5.1.1",
     "immer": "^9.0.6",
     "moment": "^2.29.1",
