--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "json-server": "^0.16.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "whatwg-fetch": "^3.0.0"
   }
 }
