--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.1",
     "next": "^11.1.0",
     "react": "^17.0.2",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
     "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1"
